# RawHash-Simulation

./: .gitignore  CMakeLists.txt  README.md  plot_results.py  rawhash_cycles.csv  rawhash_results.json  rawhash_simulation.cpp
build_sw/: CMakeCache.txt  Makefile  cmake_install.cmake  memristor_rawhash  ref_sw.idx
src/: chain.h  dtw.cpp  main.cpp  memristor_cam.cpp  memristor_cam.h  memristor_crossbar.cpp  memristor_crossbar.h  revent.c  rindex.cpp  rindex.h  rmap.cpp  rsig.h  rsketch.cpp
src/.cph/: .main.cpp_92cbe1adc6df20bd8ec68a65986a7639.prob
test/: README.md
test/data/: README.md  download_d9_ecoli_r1041.sh
test/evaluation/rawsamble/: README.md
test/evaluation/rawsamble/d2_ecoli_r94/: README.md  run_rawhash2.sh
test/evaluation/rawsamble/d3_yeast_r94/: README.md  run_rawhash2.sh
test/evaluation/rawsamble/d4_green_algae_r94/: README.md  run_rawhash2.sh
test/evaluation/rawsamble/d5_human_na12878_r94/: README.md  run_rawhash2.sh
test/evaluation/rawsamble/d9_ecoli_r1041/: README.md  run_rawhash2.sh
test/evaluation/read_mapping/d6_ecoli_r104/: profile_rawhash.sh  run_rawhash2.sh
test/evaluation/read_mapping/d7_saureus_r104/: profile_rawhash.sh  run_rawhash2.sh
test/scripts/: analyze_gfa.sh  compute_aun.py  evaluate_gfa.py  run_minimap2_multimap.sh
